--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "prettier-standard": "^16.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "react-use": "^17.4.0",
-    "typescript": "^4.0.5",
+    "typescript": "^3.2.1",
     "web-vitals": "^0.2.4",
     "zksync": "^0.12.2"
   },
