--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "zksync": "^0.12.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "dev": "BROWSER=none npm start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
